--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "scripts": {
     "dev": "ts-node-dev --transpile-only --ignore-watch node_modules --respawn ./src/server.ts",
     "typeorm": "ts-node-dev ./node_modules/typeorm/cli",
-    "test": "jest",
-    "test:unit": "jest --watch"
+    "test": "jest --detectOpenHandles",
+    "test:unit": "jest --watch --detectOpenHandles"
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
